--- a/lab1_shaden.html.html
+++ b/lab1_shaden.html.html
@@ -9,8 +9,7 @@
 <h2>Shaden</h2>
 
 <br>
-<p>hello my name is shaden falah .i enjoy cooking food ,hair style ,and learing how to code. i'm excited to start my 
-journey into web development</p>
+<p>i love web</p>
 
 
 <img src="https://cdn.prod.website-files.com/60d1f0b413ba8348509a33a6/632054ac16db8a61c4572be2_how-to-be-a-better-cook-19.jpg" >
