--- a/lab1_shaden.html.html
+++ b/lab1_shaden.html.html
@@ -13,7 +13,7 @@
 
 <h1>image</h1>
 <img src="https://cdn.prod.website-files.com/60d1f0b413ba8348509a33a6/632054ac16db8a61c4572be2_how-to-be-a-better-cook-19.jpg" >
-
+<img src="https://cdn.prod.website-files.com/60d1f0b413ba8348509a33a6/632054ac16db8a61c4572be2_how-to-be-a-better-cook-19.jpg" >
 <br>
 <br>
 visit my favorite website:<a href="https://www.youtube.com/?app=desktop&hl=ar">like</a>
