--- a/lab1_shaden.html.html
+++ b/lab1_shaden.html.html
@@ -2,6 +2,7 @@
 <head>
 <title>My simple webpage</title>
 <link rel="stylesheet"href="styles.css">
+
 </head>
 <body>
 <br>
@@ -10,7 +11,7 @@
 
 <br>
 <p>i love web</p>
-
+<p> hi lab2</p>
 <h1>image</h1>
 <img src="https://cdn.prod.website-files.com/60d1f0b413ba8348509a33a6/632054ac16db8a61c4572be2_how-to-be-a-better-cook-19.jpg" >
 <img src="https://cdn.prod.website-files.com/60d1f0b413ba8348509a33a6/632054ac16db8a61c4572be2_how-to-be-a-better-cook-19.jpg" >
